--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 layout: default
 ---
 
-<link href="themes/prism.css" rel="stylesheet" />
-<script src="prism.js"></script>
+<html>
+<head>
+	...
+	<link href="themes/prism.css" rel="stylesheet" />
+</head>
+<body>
+	...
+	<script src="prism.js"></script>
+</body>
+</html>
 
 <div class="posts">
   {% for post in site.posts %}
