--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <html>
 <head>
 	...
-	<link href="themes/prism.css" rel="stylesheet" />
+	<link href="prism.css" rel="stylesheet" />
 </head>
 <body>
 	...
